Fix blog post padding on mobile

--- a/styles/_scss/_blog-post.scss
+++ b/styles/_scss/_blog-post.scss
@@ -2,6 +2,10 @@
     max-width: 600px;
     margin: 0 auto;
     padding-top: 2 * $content-margin;
+
+    &.blog-post-container {
+        padding: 0 $content-margin;
+    }
 }
 
 .post__title {
